fixed z-index issues

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a img {
 	line-height: 28px;
 	font-family: 'Droid Sans', sans-serif;
 	background-color: rgba(0,0,0,0.7);
-	z-index: 1;
+	z-index: 2;
 	transition: top .5s ease;
 	-moz-transition: top .5s ease;
 	-webkit-transition: top .5s ease-out;
@@ -118,7 +118,8 @@ a.imglink {
 	font-family: 'Droid Sans', sans-serif;
 	color: white;
 	text-align: center;
-	font-size: 11pt;}
+	font-size: 11pt;
+	z-index: 1;}
 #warning a:link {
 	color: white;}
 #warning a:visited {
@@ -133,7 +134,7 @@ a.imglink {
 	top: 35px;
 	right: 26px;
 	display: none;
-	z-index: 2;
+	z-index: 3;
 	border-radius: 6px;
 	box-shadow: 0 10px 40px rgba(0, 0, 0, .4);
 	transition: all .15s ease;
